Попытался добавить кэширование - не пошло, пойду спать

--- a/FrogAnanas/FrogAnanas.csproj
+++ b/FrogAnanas/FrogAnanas.csproj
@@ -8,9 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.NCache" Version="5.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="VkBotFramework" Version="1.0.0" />
   </ItemGroup>
 
